# coasti_installer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yml  pyproject.toml
.github/workflows/: python.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: conf.py  contribution_guide.md  env_vars.md  getting_started.ipynb  index.md  installer_specs.md
docs/_static/: custom.css
docs/_templates/: page.html
docs/dev/: contribution.md  documentation.md  index.md
src/: create_template_bundle.py
src/coasti/: cli.py  coasti.py  config.py  create_template_bundle.py  init.py  logger.py  product.py  prompt.py
src/coasti/_bundles/: template-repo.bundle
src/coasti/git/: __init__.py  askpass.bat
src/coasti/product/: __init__.py  answer.py  askpass.sh  cli.py  product.py  prompt.py  questions.py
src/coasti/product/questions/: copier.yml
src/coasti/templates/coasti/: copier.yml
src/coasti/templates/coasti/config/secrets/: auth_test.jinja
src/coasti/templates/product_install/: copier.yml
template/: .gitignore  copier.yml
template/config/: tools.yml.jinja
templates/coasti/: .gitignore.jinja  install_questions.yml  install_tasks.yml  questions.yml
templates/coasti/config/: install_answers.yml.jinja  products.yml.jinja  tools.yml.jinja
templates/coasti/config/secrets/: sample_pass.jinja  vcs_auth_coasti.jinja
templates/mock_product/: README.md  copier.yml
templates/product_install/: questions.yml
tests/: test_logger.py  test_prompt.py
tests/cli/: conftest.py  test_flags.py  test_init.py  test_product.py  test_version.py
