[project]
name = "coasti"
version = "0.1.1"
description = "Installer for Coasti, the Open-Source Business Intelligence Framework"
readme = "README.md"
authors = [
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "python-dotenv>=1.0.1",
    "typer>=0.15.2",
    "PyYAML>=6.0.2",
    "ruamel.yaml>=0.18.10",
    "xkcdpass>=1.20",
    "copier>=9.11.3",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["*tests*"]
include = ["pyproject.toml", "coasti/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PTH", # Use pathlib instead of os.path
    "W",   # pycodestyle
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_decorators = true
allow_redefinition = true

# make the cli available
[project.scripts]
coasti = "coasti:cli.app"
